# emu8080

./: .gitignore  Cargo.toml  README  index.html
.github/workflows/: rust.yml
core/: Cargo.toml
core/src/: cpu_state.rs  interrupts.rs  main.rs  op_code.rs
src/: cpu_state.rs  disassembler.rs  in_out.rs  interrupts.rs  lib.rs  main.rs  op_code.rs  util.rs  wasm.rs
