[package]
name = "emulator8080"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.71"
thiserror = "1.0.40"
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'EventListener',
  'EventTarget',
  'KeyboardEvent',
  'Window',
  'ImageData',
]
